# Note: keep this file in wiki format for easy pasting to the proto-ch wiki
# Note: keep milestone bullets in ticket numerical order for easier
#       reconciliation at release time

= GENI Portal Release Notes =

== 2.18 ==
 * Add Stitching Allocate Resources Interface (#581)

== 2.17.1 ==
 * Allow the OpenID WiMAX username attribute to be wimax/wimax_username. (#1097)

== 2.17 ==
 * Add indices on logging_entry, logging_entry_attribute, 
   ma_member_attribute, sa_slice_member (CHAPI #311)
 * Automatically retrieve Ad RSpecs from AMs (#721)
 * Handle expiration time properly from GRAM AM (#1061)
 * Added scripts to support archiving db tables (#1071)
 * Fix grammar and a typo in certificate renewal (#1072)
 * Update LabWiki URL (#1073)
 * Use pushstate history for profile tabs (#1074)
 * Update to omni 2.6 (#1078)
 * Renamed generated SSH keypair filename in omni bundle
   if it would conflict with another file in the bundle. (#1063)
 * Remove dependence on pg_manifest field of sliver status (#1084)
 * Fix link on login-help page to point to new password reset page. (#1056)

== 2.16.7 ==
 * Update the LabWiki URL (#1073)

== 2.16.6 ==
 * Fix for slice page not defaulting to This Slice on Safari (#1067)

== 2.16.5 ==
 * Band-aid for sliver status failure. Partial fix for (#1000)

== 2.16.4 ==
 * Fix bug on slice page where the date picker would reset to the default date. (#1064)

== 2.16.3 ==
 * Put up an Orbit logo on the WiMAX page for people to use their new WiMAX account. (#1062)

== 2.16.2 ===
 * Fix a timeout bug by increasing buffer and decreasing sleep (#1060)

== 2.16.1 ===
 * Enable the WiMAX page for all users. (#1015)

== 2.16 ==
 * Allow editing RSpec properties (requires DB update). (#226)
 * Revamped slice page with all new table of aggregates to act on and
   action buttons only on that table. (#1038)
  * Slice page: actions on selected aggregates only (#958)
  * Support selecting aggregates where the slice has resources (#762)